--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,11 +1,26 @@
+* {
+    box-sizing: border-box;
+}
+html {
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
 body {
     background: #101010;
     color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.6;
     min-height: 100vh;
     text-align: center;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 //
@@ -31,10 +46,43 @@ body {
 // Controls
 //
 
+.list-inline li {
+    display: inline-block;
+    padding: 0 5px;
+}
 .btn {
+    background-color: #f3f3f3;
+    border: 2px solid transparent;
+    color: #333;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 11px;
     font-weight: bold;
+    letter-spacing: 0.12em;
+    line-height: 16px;
+    margin-bottom: 0;
     outline: none !important;
+    padding: 15px 22px;
+    text-align: center;
+    text-transform: uppercase;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    -webkit-transition: background-color 0.2s ease-out;
+    -o-transition: background-color 0.2s ease-out;
+    transition: background-color 0.2s ease-out;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
 
+    &.btn-xl {
+        font-size: 14px;
+        letter-spacing: 0.12em;
+        line-height: 16px;
+        padding: 20px 40px;
+    }
     &.start {
         background-color: #16a085;
         color: #fff;
